--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dcodelabTutor.github.io/react_page",
+  "homepage": "https://hong-kyungs.github.io/react_portfolio1",
   "name": "test",
   "version": "0.1.0",
   "private": true,
