--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sentry/react": "^7.6.0",
     "@sentry/tracing": "^7.6.0",
     "axios": "^0.27.2",
+    "framer-motion": "^6.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-masonry-component": "^6.3.0",
