--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "@sentry/react": "^7.6.0",
     "@sentry/tracing": "^7.6.0",
     "axios": "^0.27.2",
@@ -16,8 +17,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-masonry-component": "^6.3.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "sass": "^1.51.0"
   },
   "scripts": {
