메인페이지 디자인 진행중

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hong-kyungs.github.io/react_portfolio1",
+  "homepage": "https://hong-kyungs.github.io/react_portfolio1/",
   "name": "test",
   "version": "0.1.0",
   "private": true,
