--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "swiper": "^8.3.1",
+    "util": "^0.12.4"
   },
   "scripts": {
     "start": "react-scripts start",
